--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -1,4 +1,4 @@
-name: HelplineV1 CI/CD Pipeline
+name: HelplineV1 Staging Pipeline
 permissions:
   contents: write
   pull-requests: write
@@ -165,7 +165,6 @@ jobs:
           docker push $PHP_TAG
           
           echo "PHP_IMAGE_TAG=$PHP_TAG" >> $GITHUB_ENV
-          echo "PHP image built and pushed successfully"
 
       - name: Build and push Nginx image
         working-directory: helplinev1
@@ -178,7 +177,6 @@ jobs:
           docker push $NGINX_TAG
           
           echo "NGINX_IMAGE_TAG=$NGINX_TAG" >> $GITHUB_ENV
-          echo "Nginx image built and pushed successfully"
 
       - name: Build summary
         id: build-summary
@@ -186,7 +184,7 @@ jobs:
           echo "php-tag=${{ env.PHP_IMAGE_TAG }}" >> $GITHUB_OUTPUT
           echo "nginx-tag=${{ env.NGINX_IMAGE_TAG }}" >> $GITHUB_OUTPUT
 
-  # Deploy to Staging - completely rewritten to avoid SSH issues
+  # Deploy to Staging - isolated and safe for shared server
   deploy-staging:
     runs-on: ubuntu-latest
     needs: [unit-tests, build-images]
@@ -204,57 +202,59 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Install Docker on EC2
+      - name: Verify Docker availability
         run: |
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'sudo yum update -y && sudo yum install -y docker && sudo systemctl start docker && sudo systemctl enable docker && sudo usermod -a -G docker ec2-user'
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'docker --version && docker-compose --version || { echo "Docker/Docker-Compose not available"; exit 1; }'
 
-      - name: Install Docker Compose on EC2
+      - name: Create isolated staging directory
         run: |
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose && sudo chmod +x /usr/local/bin/docker-compose'
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'mkdir -p ~/helplinev1-staging && echo "Staging directory ready"'
 
-      - name: Create deployment directory
-        run: |
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'sudo mkdir -p /opt/helplinev1 && sudo chown ec2-user:ec2-user /opt/helplinev1'
-
-      - name: Copy application files
+      - name: Prepare and copy application files
         working-directory: helplinev1
         run: |
-          tar -czf deployment.tar.gz application/ rest_api/ docker/config/
-          scp deployment.tar.gz ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/opt/helplinev1/
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd /opt/helplinev1 && tar -xzf deployment.tar.gz'
+          # Create deployment package in temp directory
+          TEMP_DIR=$(mktemp -d)
+          cp -r application/ rest_api/ docker/ "$TEMP_DIR/"
+          cd "$TEMP_DIR"
+          tar -czf helplinev1-staging.tar.gz application/ rest_api/ docker/
+          
+          # Copy to server
+          scp helplinev1-staging.tar.gz ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd ~/helplinev1-staging && tar -xzf ~/helplinev1-staging.tar.gz && rm ~/helplinev1-staging.tar.gz'
 
-      - name: Login to registry on EC2
+      - name: Login to container registry
         run: |
           ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin'
 
-      - name: Pull Docker images
+      - name: Pull latest images
         run: |
           ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'docker pull ${{ needs.build-images.outputs.php-image-tag }} && docker pull ${{ needs.build-images.outputs.nginx-image-tag }}'
 
-      - name: Create docker-compose file
+      - name: Create staging docker-compose configuration
         run: |
           cat > docker-compose-staging.yml << 'EOF'
           services:
             database:
               image: mysql:8.0
-              container_name: helpline-db-staging
+              container_name: helpline-staging-db
               environment:
                 MYSQL_ROOT_PASSWORD: ${{ secrets.STAGING_DB_ROOT_PASSWORD }}
                 MYSQL_DATABASE: helpline_staging
                 MYSQL_USER: ${{ secrets.STAGING_DB_USER }}
                 MYSQL_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
               ports:
-                - "3307:3306"
+                - "3308:3306"
               volumes:
-                - db_data_staging:/var/lib/mysql
-                - ./rest_api/config/uchl.sql:/docker-entrypoint-initdb.d/01-complete-schema.sql
+                - helpline_staging_data:/var/lib/mysql
+                - ./rest_api/config/uchl.sql:/docker-entrypoint-initdb.d/01-schema.sql
               restart: unless-stopped
               networks:
-                - helpline-network
+                - helpline-staging-net
           
             php-api:
               image: ${{ needs.build-images.outputs.php-image-tag }}
-              container_name: helpline-php-staging
+              container_name: helpline-staging-php
               volumes:
                 - ./application:/var/www/html/helpline
                 - ./rest_api/api:/var/www/html/helpline/api
@@ -270,14 +270,14 @@ jobs:
                 - DB_PASS=${{ secrets.STAGING_DB_PASSWORD }}
               restart: unless-stopped
               networks:
-                - helpline-network
+                - helpline-staging-net
           
             nginx:
               image: ${{ needs.build-images.outputs.nginx-image-tag }}
-              container_name: helpline-nginx-staging
+              container_name: helpline-staging-nginx
               ports:
-                - "8888:80"
-                - "8443:443"
+                - "8890:80"
+                - "8445:443"
               volumes:
                 - ./application:/var/www/html/helpline
                 - ./rest_api/api:/var/www/html/helpline/api
@@ -287,29 +287,47 @@ jobs:
                 - php-api
               restart: unless-stopped
               networks:
-                - helpline-network
+                - helpline-staging-net
           
           volumes:
-            db_data_staging:
+            helpline_staging_data:
           
           networks:
-            helpline-network:
+            helpline-staging-net:
               driver: bridge
+              name: helpline-staging-network
           EOF
-          scp docker-compose-staging.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/opt/helplinev1/docker-compose.yml
+          
+          # Copy to server
+          scp docker-compose-staging.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/helplinev1-staging/docker-compose.yml
 
-      - name: Stop existing containers
+      - name: Stop existing staging containers
         run: |
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd /opt/helplinev1 && docker-compose down || true'
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd ~/helplinev1-staging && docker-compose down --remove-orphans || echo "No existing staging containers"'
 
-      - name: Start new containers
+      - name: Start staging environment
         run: |
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd /opt/helplinev1 && docker-compose up -d'
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'cd ~/helplinev1-staging && docker-compose up -d'
 
-      - name: Wait and health check
+      - name: Verify deployment
         run: |
-          sleep 60
-          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'curl -f http://localhost:8888 && echo "Deployment successful!"'
+          echo "Waiting 90 seconds for services to initialize..."
+          sleep 90
+          
+          # Check if containers are running
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'docker ps --filter name=helpline-staging'
+          
+          # Health check
+          ssh -T ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} 'curl -f http://localhost:8890 && echo "Staging health check passed"'
+
+      - name: Display staging information
+        run: |
+          echo "### Staging Deployment Complete ###"
+          echo "Staging URL: http://${{ secrets.EC2_HOST }}:8890"
+          echo "Database Port: 3308 (MySQL)"
+          echo "HTTPS Port: 8445"
+          echo "Container Prefix: helpline-staging-*"
+          echo "Network: helpline-staging-network"
 
   # Summary
   deployment-summary:
@@ -318,26 +336,32 @@ jobs:
     if: always()
     
     steps:
-      - name: Generate summary
+      - name: Generate deployment summary
         run: |
-          echo "## HelplineV1 Pipeline Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## HelplineV1 Staging Pipeline Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** [\`${GITHUB_SHA:0:7}\`](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          echo "### Results" >> $GITHUB_STEP_SUMMARY
-          echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
-          echo "|-----|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Unit Tests | ${{ needs.unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Build Images | ${{ needs.build-images.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Deploy Staging | ${{ needs.deploy-staging.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "### Pipeline Results" >> $GITHUB_STEP_SUMMARY
+          echo "| Stage | Status | Coverage |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|--------|----------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Unit Tests | ${{ needs.unit-tests.result }} | ${{ needs.unit-tests.outputs.coverage-percentage }}% |" >> $GITHUB_STEP_SUMMARY
+          echo "| Build Images | ${{ needs.build-images.result }} | - |" >> $GITHUB_STEP_SUMMARY
+          echo "| Deploy Staging | ${{ needs.deploy-staging.result }} | - |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
           if [ "${{ needs.deploy-staging.result }}" == "success" ]; then
-            echo "### Staging Deployed Successfully!" >> $GITHUB_STEP_SUMMARY
-            echo "Application: http://${{ secrets.EC2_HOST }}:8888" >> $GITHUB_STEP_SUMMARY
+            echo "### Staging Environment Ready" >> $GITHUB_STEP_SUMMARY
+            echo "**Access URL:** http://${{ secrets.EC2_HOST }}:8890" >> $GITHUB_STEP_SUMMARY
+            echo "**Database:** localhost:3308" >> $GITHUB_STEP_SUMMARY
+            echo "**SSL:** https://${{ secrets.EC2_HOST }}:8445" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### Docker Images" >> $GITHUB_STEP_SUMMARY
+            echo "- PHP: \`${{ needs.build-images.outputs.php-image-tag }}\`" >> $GITHUB_STEP_SUMMARY
+            echo "- Nginx: \`${{ needs.build-images.outputs.nginx-image-tag }}\`" >> $GITHUB_STEP_SUMMARY
           elif [ "${{ github.ref }}" != "refs/heads/main" ]; then
-            echo "### Feature Branch Testing Complete" >> $GITHUB_STEP_SUMMARY
-            echo "Ready for merge to main branch" >> $GITHUB_STEP_SUMMARY
+            echo "### Feature Branch Complete" >> $GITHUB_STEP_SUMMARY
+            echo "Tests passed, images built. Ready for merge to deploy to staging." >> $GITHUB_STEP_SUMMARY
           fi
